k8s/seafile/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seafile
  namespace: seafile
spec:
  selector:
    matchLabels:
      app: seafile
  replicas: 1
  template:
    metadata:
      labels:
        app: seafile
    spec:
      nodeSelector:
        machine: beacon
      containers:
        - name: seafile
          image: seafileltd/seafile-mc:11.0-latest
          ports:
            - containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: seafile-data
              mountPath: /shared
        - name: mariadb
          image: mariadb:10.11
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mariadb-data
              mountPath: /var/lib/mysql
        - name: memcached
          image: memcached:1.6.18
          args: ["-m", "256"]
          ports:
            - containerPort: 11211
      volumes:
        - name: seafile-data
          persistentVolumeClaim:
            claimName: seafile-data
        - name: mariadb-data
          persistentVolumeClaim:
            claimName: mariadb-data
