k8s/seafile/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: seafile-svc
  namespace: seafile
  labels:
    app: seafile
spec:
  selector:
    app: seafile
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
